tests/negative/gold/indent4_test.gold
tests/negative/indent4_test.toit:9:11: error: Unexpected delimiter
    break ? true : false
          ^
Compilation failed.
